# csv-to-sql

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cui_build.yml  cui_test.yml  release-drafter.yml
src/: lib.rs  main.rs
src/cui/: mod.rs  options.rs
src/tasks/: controller.rs  mod.rs  to_insert.rs  to_query.rs  to_select.rs  to_table_definition.rs  to_tsv.rs  to_utf8.rs
src/tasks/to_table_definition/: mod.rs  table_definition.rs
