[package]
name = "csv-to-sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "symbols"

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.24"
clap = {version = "4", features = ["derive"]}
csv = "1.2.1"
derive-new = "0.5.9"
encoding_rs = "0.8.32"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
